# FlatLang

./: .gitignore  .gitmodules  CMakeLists.txt  MyRealTimeLoop.h  README.md  main.cpp  tmp.md
docs/: LogicalGatesbackup.md  simple example.md  translated to cpp.md
flatLangPy/: flatLangPy.cpp
libFlatLang/: CMakeCog.py  CMakeLists.txt  FlatLangConfig.cpp  FlatLangConfig.h  FlatLangConfig.h.old  test.txt
libFlatLang/hpp/: FlatLangConfig.hpp
scripts/: CMakeCogLib.py  parseHpp.py  runCog.sh
test/: CMakeLists.txt  hello_test.cc
